--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="icone" type="img/png" href="https://images.vexels.com/media/users/3/182527/isolated/lists/345de27eebd970a746443115191451da-icone-de-cor-doce.png">
   </head>
   <body>
-    <div class="corpo">
+    <center class="corpo">
       <h1>Doce Vida</h1>
       <h3>A sua vida merece ser <span>doce todos os dias</span></h3>
       <hr>
       <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-    </div>
+    </center>
   </body>
 </html>
