--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Doce Vida</title>
     <meta charset="utf-8">
+    <link rel=STYLESHEET href="style.css" type="text/css">
     <link rel="icone" type="img/png" href="https://images.vexels.com/media/users/3/182527/isolated/lists/345de27eebd970a746443115191451da-icone-de-cor-doce.png">
   </head>
   <body>
