--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Doce Vida</h1>
       <h3>A sua vida merece ser <span>doce todos os dias</span></h3>
       <hr>
-      <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+      <a href="doces.html">xxxxxxxxxxxxxxxxxxxxxxxxxxxxx</a>
     </center>
   </body>
 </html>
