--- a/doces.html
+++ b/doces.html
@@ -3,7 +3,7 @@
   <head>
     <title>Título da página</title>
     <meta charset="utf-8">
-    <link style=STYLESHEET href="style.css" type="text/css">
+    <link rel=STYLESHEET href="style.css" type="text/css">
   </head>
   <body>
     <img src="https://i.pinimg.com/474x/66/4f/a7/664fa707f7e5f48f89e3bad333a73240.jpg">
