--- a/doces.html
+++ b/doces.html
@@ -4,6 +4,7 @@
     <title>Título da página</title>
     <meta charset="utf-8">
     <link rel=STYLESHEET href="style.css" type="text/css">
+    <script src="script.js">
   </head>
   <body>
     <img src="https://i.pinimg.com/474x/66/4f/a7/664fa707f7e5f48f89e3bad333a73240.jpg">
