--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <h3>A sua vida merece ser <span>doce todos os dias</span></h3>
       <hr>
       <a href="doces.html">xxxxxxxxxxxxxxxxxxxxxxxxxxxxx</a>
+      <a href="contato.html">Entre em contato</a>
+      <script src="script.js></script>
     </center>
   </body>
 </html>
