--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <h1>Doce Vida</h1>
       <h3>A sua vida merece ser <span>doce todos os dias</span></h3>
       <hr>
-      <a href="doces.html">xxxxxxxxxxxxxxxxxxxxxxxxxxxxx</a>
-      <a href="contato.html">Entre em contato</a>
+      <a href="doces.html" class="pagecandy">xxxxxxxxxxxxxxxxxxxxxxxxxxxxx</a>
+      <a href="contato.html" class="contact">Entre em contato</a>
       <script src="script.js></script>
     </center>
   </body>
