--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,7 @@
     <title>Título da página</title>
     <meta charset="utf-8">
     <script src="script.js"></script>
+    <link rel=STYLESHEET href="form.css" type="text/css">
   </head>
   <body>
     <div class="card">
